make the buttons for pitching

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,11 +9,11 @@
 <div class="bgimage">
     <div class="p-3 p-md-5 m-md-3 text-center bg-transparent">
         <div class="col-md-12 p-lg-5 mx-auto my-5">
-            <h1 class="display-4 font-weight-normal text-white">One Minute Pitch Arena:</h1>
-            <p class="lead font-weight-normal text-white">Make it happen in just a minute.</p>
+            <h1 class="display-4 font-weight-normal text-white">Welcome to Pitch-Hub:</h1>
+            <p class="lead font-weight-normal text-white">Pitch it in a minute!!</p>
             <div id="buttons d-block mx-auto">
-                <a class="btn btn-outline-secondary text-white" href="/new_post">New Pitch</a>
-                <a class="btn btn-outline-secondary text-white" href="/posts">View Pitches</a>
+                <a class="btn btn-outline-secondary text-white" href="/new_post">Make new Pitch</a>
+                <a class="btn btn-outline-secondary text-white" href="/posts">View available Pitches</a>
             </div>
         </div>
     </div>
