--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand text-white" href="/" id="logo">One Minute Pitch Arena</a>
+    <div class="navbar-translate">
+        <a class="navbar-brand text-white" href="/"><h4><span class="badge badge-dark"><i style="font-size:24px" class="fas">&#xf6be;</i>       Pitch-Hub</span></h4></a>
+      </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
             aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon text-white"></span>
