--- a/app/static/css/particle.css
+++ b/app/static/css/particle.css
@@ -9,8 +9,8 @@ body {
 }
 
 #particles-js {
-background_repeat: repeat-x;
-background_size: cover;
+background-repeat: repeat-x;
+background-size: cover;
 }
 
 .navbar{
